Catalog-Service/container/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    name: catalog
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 9090
      protocol: TCP
      name: http

  type: NodePort
  selector:
    name: catalog
